Update _pagination.scss to fix bug where it doesn't wrap

--- a/bootstrap/source/_pagination.scss
+++ b/bootstrap/source/_pagination.scss
@@ -1,5 +1,6 @@
 .pagination {
   display: flex;
+  flex-wrap: wrap;
   @include list-unstyled();
   @include border-radius();
 }
